# MPASResample

./: CMakeLists.txt  README.md
lib/pkgconfig/: glfw3.pc
res/shaders/: triangle_mesh.fs  triangle_mesh.gs  triangle_mesh.vs
src/: main.cpp
